# fraction

./: CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
examples/: linear_regression.cpp
include/fraction/core/: tensor.hpp
include/fraction/models/: linear_regression.hpp
tests/: tensor.cpp
